After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769042 - 'O_CLOEXEC' undeclared (first use in this function)
'O_CLOEXEC' undeclared (first use in this function)
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.49.x
Other Mac OS
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2016-07-21 15:20 UTC by Ryan Schmidt
Modified: 2016-07-21 15:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ryan Schmidt 2016-07-21 15:20:56 UTC
glib 2.49.4 fails to build on Mac OS X 10.6 with this error:


gdocumentportal.c: In function ‘g_document_portal_add_document’:
gdocumentportal.c:109: error: ‘O_CLOEXEC’ undeclared (first use in this function)


O_CLOEXEC was not added to Mac OS X until version 10.7 so it would be nice if you could use an alternative for older systems that don't have this defined.

We had this situation in glib once before in bug #712136 and it got fixed. Could it get fixed again? Thanks.